# stepan2

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  scratch_smm.txt
app/: __init__.py  config.py
docs/: README.md  ad-attribution-and-reports.md  broker-log.md  chat-panel-perf.md  crm-integration.md  crm-read.md  deploy.md  dialogue-qa-checklist.md  free-mode.md  kb-fact-sync.md  kb-sharing.md  knowledge-base.md  launch-checklist.md  lead-identity-and-deletion.md  mcp.md  multitenant-design.md  needs-cloud.md  redesign-2026-07-critic-and-facts-kb.md  reply-guard.md  reply-pipeline.md  sales-methodology.md  worker.md
infra/: .env.example  docker-compose.yml
mcp_server/: README.md  requirements.txt  stepan_mcp.py
migrations/: 030_ig_profile_and_ad_fields.sql  031_lead_audience.sql  env.py  script.py.mako
scripts/: backfill_needs_llm.py  bakeoff_capability.py  kb_fact_audit.py  migrate_from_stepan1.py  reclassify_lead_types.py  reclassify_leads.py  rederive_needs.py  reembed_all_branches.py  restage_leads.py  sim_compare.py  sim_v3_compare.py
tests/: conftest.py  test_ad_funnel.py  test_ad_prefill_scope.py  test_ad_product_map.py  test_ad_tree.py  test_ad_tree_hints.py  test_adaptive_ingest.py  test_admin.py  test_ads_backfill_miss.py  test_ads_bridge.py  test_ads_sync.py  test_api.py  test_auth.py  test_auth_gate.py  test_block_clear.py  test_blocked_count.py  test_bootstrap.py  test_broker_breaker.py  test_broker_errors.py  test_broker_log.py  test_budget_crm_capi.py  test_changelog.py  test_channel_purge.py  (+128 more)
(+236 files in other folders)
