[project]
name = "stepan2"
version = "0.1.0"
description = "Multi-tenant AI sales platform — branches, broker-only LLM, multi-channel"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "fastapi-users[sqlalchemy]>=14",
    "casbin>=1.36",
    "arq>=0.26",
    "sqladmin>=0.20",
    "httpx>=0.27",
    "cryptography>=43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "aiosqlite>=0.20",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]  # assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
